# diagrams

./: .gitignore  INTEGRATION_REPORT.md  LICENSE  MERGE_PROPOSAL.md  NIX_EVALUATION.md  README.md  design-tokens.v1.json  disruptives.jsonl  flake.nix  package-lock.json  package.json  proposal.jsonl  pyproject.toml  raws.jsonl  smoke-report.json  submission-manifest.json  ux-contract.v1.json  zip-role-decision-report.json
.github/workflows/: artifact-gallery.yml
canonical/fixtures/: manifest.seed.json
docs/: future-ci.md
docs/worktrees/: wt-001-canonical-design-fixtures.md  wt-002-jsonl-meaning-model.md  wt-003-layout-router-contract.md  wt-004-grid-free-layout-layer.md  (+17 more)
nix/: README.md  package-contract.json
proposal-evidence/: legacy-semantic-compare.json  semantic-no-regression-summary.md
proposal-template/: worktree-proposal.template.json
records/: canonical-merge-proposal.jsonl  main-baseline.jsonl
schemas/: diagram-event.v1.schema.json  diagram-meaning.v1.schema.json
tests/: __init__.py
tools/: build_ci_artifact_gallery.py  build_semantic_roundtrip_poc.py  check_generated_svg.py  check_no_html_in_zip.py  integration_smoke.py  make_inline_preview.py  rebuild_compare.py  semantic_compare_legacy.py
validation/: VALIDATION_SUMMARY.md  artifact-quality-report.json  d2-elk-smoke.json  golden-regression-policy.json  html-source-check.json  json-parse-check.json  no-html-zip-check.json  rebuild-compare-require-engines-smoke.json  rebuild-compare-require-engines.json  rebuild-compare.json  source-boundary-check.json  svg-provenance.json
(+89 files in other folders)
